# Tetris

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameData.cpp  GameData.h  LICENSE  Main.cpp  Main.h  Menu.cpp  Menu.h  README.md  ReadFile.cpp  ReadFile.h  SoundManager.h  SoundSettings.cpp  SoundSettings.h  Tetris New.sln  Tetris New.vcxproj  Tetris New.vcxproj.filters  music_sounds_coonfig.ini
extlibs/include/SFML/Network/: Packet.hpp
include/: AudioManager.h  Game.h  GameMusic.h  GameSound.h  Main.h  Menu.h  ReadFile.h
resources/: destruction.flac  gameover.flac
src/: AudioManager.cpp  Game.cpp  GameMusic.cpp  GameSound.cpp  Main.cpp  Menu.cpp  ReadFile.cpp
